Documentação do processador de ligador.